@startuml

title __MODEL's Class Diagram__\n

  namespace endpointmethod.model {
    class endpointmethod.model.Circle {
        - radius : double
        + construct()
        + getMidpoint()
        + getRadius()
    }
  }
  

  namespace endpointmethod.model {
    class endpointmethod.model.Line {
        + getEndPoint()
        + getLength()
        + getStartPoint()
        + setEndPoint()
        + setStartPoint()
    }
  }
  

  namespace endpointmethod.model {
    class endpointmethod.model.LineManager {
        - lines : ArrayList<Line>
        - probability : float
        - randomStartpoint : boolean
        + IsValid()
        + LineManager()
        + generateLines()
        + getLines()
        + getProbability()
        + setRandomStartpoint()
    }
  }
  

  namespace endpointmethod.model {
    class endpointmethod.model.Point {
        - x : double
        - y : double
        + Point()
        + getX()
        + getY()
    }
  }
  

  namespace endpointmethod.model {
    class endpointmethod.model.PointManager {
        - onCirclePoints : ArrayList<Point>
        + generatePointsOnCircle()
        + getOnCirclePoints()
    }
  }
  

  namespace endpointmethod.model {
    class endpointmethod.model.Triangle {
        - height : double
        - verticeLength : double
        + Triangle()
        + getFirstCorner()
        + getHeight()
        + getSecondCorner()
        + getThirdCorner()
        + getVerticeLength()
        + setFirstCorner()
        + setSecondCorner()
        + setThirdCorner()
    }
  }
  

  endpointmethod.model.Circle o-- endpointmethod.model.Point : midpoint
  endpointmethod.model.Line o-- endpointmethod.model.Point : endPoint
  endpointmethod.model.Line o-- endpointmethod.model.Point : startPoint
  endpointmethod.model.Triangle o-- endpointmethod.model.Point : firstCorner
  endpointmethod.model.Triangle o-- endpointmethod.model.Point : secondCorner
  endpointmethod.model.Triangle o-- endpointmethod.model.Point : thirdCorner


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
